[package]
name = "git_analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.14", features = ["json", "gzip", "brotli"] }
tokio = { version = "1.26.0", features = ["full"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
zip = "0.6.4"
dotenv = "0.15"
